# eidolon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ISSUES.md  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
crates/eidolon-core/: Cargo.toml
crates/eidolon-core/src/: api.rs  auth.rs  fork_manager.rs  lib.rs
crates/eidolon-evm/: Cargo.toml
crates/eidolon-evm/src/: lib.rs  tracer.rs
crates/eidolon-forkdb/: Cargo.toml
crates/eidolon-forkdb/src/: lib.rs
crates/eidolon-rpc/: Cargo.toml
crates/eidolon-rpc/src/: lib.rs
crates/eidolon-types/: Cargo.toml
crates/eidolon-types/src/: lib.rs
dashboard/: index.html  package-lock.json
dashboard/src/: main.js  style.css
