[package]
name = "eidolon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
eidolon-evm = { path = "../eidolon-evm" }
eidolon-forkdb = { path = "../eidolon-forkdb" }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
dashmap = "5.5"
