[package]
name = "eidolon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
eidolon-evm = { path = "../eidolon-evm" }
eidolon-forkdb = { path = "../eidolon-forkdb" }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
dashmap = "5.5"
redis = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
eidolon-rpc = { version = "0.1.0", path = "../eidolon-rpc" }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
