[package]
name = "eidolon-forkdb"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
