[package]
name = "eidolon-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
eidolon-evm = { path = "../eidolon-evm" }
alloy-primitives = { workspace = true }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
std = { version = "0.50.0", package = "parking_lot" } # Faster locks than std::sync
