[package]
name = "eidolon-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
eidolon-evm = { path = "../eidolon-evm" }
alloy-primitives = { workspace = true }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12" # Faster locks than std::sync
alloy-consensus = { version = "0.8", default-features = false, features = ["k256", "std"] }
alloy-eips = "0.8"
alloy-rlp = "0.3"
derive_more = { version = "1.0", features = ["display", "from"] }
eidolon-types = { version = "0.1.0", path = "../eidolon-types" }
